Fixed error message width to prevent wrapping

--- a/src/stylesheets/error.sass
+++ b/src/stylesheets/error.sass
@@ -2,9 +2,10 @@
 
 .error-message-container
   @extend %noselect
+  width: 100%
   padding: 20px
   padding-left: 20px
-  padding-right: 40px
+  padding-right: 20px
   background-color: #DDDDDD
   border-radius: 10px
   background-color: #7C0A02
